kubernetes_deploy/ingress_app/06_ingress/02_ingress_https/01_ingress_https_instance_mode.yaml
# Annotations Reference: https://kubernetes-sigs.github.io/aws-load-balancer-controller/latest/guide/ingress/annotations/
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: retail-store-https-instance-mode
  annotations:
    # Load Balancer Name
    alb.ingress.kubernetes.io/load-balancer-name: retail-store-https-instance-mode
    # Ingress Core Settings
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: instance
    # Health Check Settings
    alb.ingress.kubernetes.io/healthcheck-protocol: HTTP 
    alb.ingress.kubernetes.io/healthcheck-port: traffic-port
    alb.ingress.kubernetes.io/healthcheck-path: /actuator/health/readiness    
    alb.ingress.kubernetes.io/healthcheck-interval-seconds: '15'
    alb.ingress.kubernetes.io/healthcheck-timeout-seconds: '5'
    alb.ingress.kubernetes.io/success-codes: '200'
    alb.ingress.kubernetes.io/healthy-threshold-count: '2'
    alb.ingress.kubernetes.io/unhealthy-threshold-count: '2'
    external-dns.alpha.kubernetes.io/hostname: catalogservicesuj.com
    ## SSL Settings
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTPS":443}, {"HTTP":80}]'
    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:ap-south-2:048408301799:certificate/3a4ce1d5-4ca1-4a6b-898b-97770bec22cf
    # SSL Redirect Setting
    alb.ingress.kubernetes.io/ssl-redirect: '443'        
spec:
  ingressClassName: alb 
  defaultBackend:
    service:
      name: ui-np
      port:
        number: 80
